--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.32.11"
   },
   "devDependencies": {
+    "@types/node": "^15.0.0",
+    "@types/react": "^17.0.4",
     "commitizen": "^4.2.3",
-    "cz-conventional-changelog": "^3.3.0"
+    "cz-conventional-changelog": "^3.3.0",
+    "typescript": "^4.2.4"
   },
   "config": {
     "commitizen": {
