--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "devDependencies": {
     "@types/node": "^15.0.0",
     "@types/react": "^17.0.4",
+    "autoprefixer": "^10.2.5",
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
+    "postcss": "^8.2.13",
+    "tailwindcss": "^2.1.2",
     "typescript": "^4.2.4"
   },
   "config": {
