--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "CI='' next build",
+    "build": "next build",
     "start": "next start",
     "commit": "git-cz"
   },
@@ -13,6 +13,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-lottie": "^1.2.3",
     "sass": "^1.32.11"
   },
   "devDependencies": {
