--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-lottie": "^1.2.3",
-    "sass": "^1.32.11"
+    "react-multi-carousel": "^2.6.2",
+    "sass": "^1.32.11",
+    "postcss": "^8.2.13",
+    "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
     "@types/node": "^15.0.0",
@@ -22,8 +25,6 @@
     "autoprefixer": "^10.2.5",
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
-    "postcss": "^8.2.13",
-    "tailwindcss": "^2.1.2",
     "typescript": "^4.2.4"
   },
   "config": {
