--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "react-multi-carousel": "^2.6.2",
     "sass": "^1.32.11",
     "postcss": "^8.2.13",
-    "tailwindcss": "^2.1.2"
+    "tailwindcss": "^2.1.2",
+    "autoprefixer": "^10.2.5"
   },
   "devDependencies": {
     "@types/node": "^15.0.0",
     "@types/react": "^17.0.4",
-    "autoprefixer": "^10.2.5",
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
     "typescript": "^4.2.4"
