--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "@types/react-custom-scrollbars": "^4.0.7",
     "next": "10.1.3",
     "react": "17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-lottie": "^1.2.3",
