--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^4.2.0",
     "react-lottie": "^1.2.3",
     "react-multi-carousel": "^2.6.2",
-    "sass": "^1.32.11"
+    "sass": "^1.32.11",
+    "survey-react": "^1.8.46"
   },
   "devDependencies": {
     "@types/node": "^15.0.0",
