--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@types/react-custom-scrollbars": "^4.0.7",
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-custom-scrollbars": "^4.2.1",
