--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "@types/react-custom-scrollbars": "^4.0.7",
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-lottie": "^1.2.3",
     "react-multi-carousel": "^2.6.2",
     "sass": "^1.32.11",
-    "survey-react": "^1.8.46"
+    "survey-react": "^1.8.46",
+    "tailwind-scrollbar": "^1.3.1"
   },
   "devDependencies": {
     "@types/node": "^15.0.0",
