--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ifplay",
   "version": "0.1.0",
   "private": true,
+  "license": "Creative Commons",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,6 +14,7 @@
     "@types/react-custom-scrollbars": "^4.0.7",
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
+    "axios": "^0.21.1",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
