--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^0.21.1",
-    "next": "10.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "12",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-lottie": "^1.2.3",
-    "react-multi-carousel": "^2.6.2",
+    "react-multi-carousel": "^2.6.5",
     "sass": "^1.32.11",
     "survey-react": "^1.8.46",
     "tailwind-scrollbar": "^1.3.1",
