--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.2.0",
     "react-lottie": "^1.2.3",
     "react-multi-carousel": "^2.6.5",
+    "react-responsive-carousel": "^3.2.22",
     "sass": "^1.32.11",
     "survey-react": "^1.8.46",
     "tailwind-scrollbar": "^1.3.1",
