--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "react-lottie": "^1.2.3",
     "react-multi-carousel": "^2.6.5",
     "react-responsive-carousel": "^3.2.22",
+    "react-toastify": "^8.1.0",
     "sass": "^1.32.11",
-    "survey-react": "^1.8.46",
     "tailwind-scrollbar": "^1.3.1",
     "yup": "^0.32.9"
   },
