--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.26.1",
     "react-icons": "^4.2.0",
     "react-lottie": "^1.2.3",
     "react-multi-carousel": "^2.6.5",
